[package]
name    = "img_tournament"
version = "0.1.0"
edition = "2024"

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gtk        = { version = "0.7.2", package = "gtk4", features = ["v4_12"] }
glib-sys   = "0.18"
once_cell  = "1.18.0"
chrono     = "0.4"

anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["wincon", "winuser"]}
